--- a/styles.css
+++ b/styles.css
@@ -21,3 +21,9 @@ h1, h2 {
     text-align: center;
     width: 200px;
 }
+
+.chart-container {
+    width: 100%;
+    height: 300px;
+    margin: 20px 0;
+}
